fix: ensure deterministic authentication-before-authorization filter ordering
Refs: #646